cmake_minimum_required(VERSION 3.19)
project(code)

set(CMAKE_CXX_STANDARD 14)

add_executable(max_subsqeuence_sum Ch1/max_subsqeuence_sum.cpp)
add_executable(other_class_features Ch0/other_class_features.cpp)
add_executable(class Ch0/class.cpp)
add_executable(Dynamic_Memory Ch0/Dynamic_Memory.cpp)
add_executable(init_list Ch0/init_list.cpp)

add_executable(inhertance Ch0/inhertance.cpp)
add_executable(list Ch1/list.cpp)
add_executable(miscellaneous Ch0/miscellaneous.cpp)
add_executable(object_as_function_parameters Ch0/object_as_function_parameters.cpp)
add_executable(linklist Ch1/linklist.cpp)

add_executable(legal_seq Ch2/legal_seq.cpp)
add_executable(class_test Ch2/class_test.cpp)
add_executable(test_queue Ch3/test_queue.cpp)
add_executable(BFS_Matrix Ch3/BFS_Matrix.cpp)
add_executable(Hash_Table Ch3/Hash_Table.cpp)
add_executable(Ch5_test Ch5/Ch5_test.cpp)